--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,25 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cars_Antonio">
         <activity
+            android:name=".Process_Circuit"
+            android:exported="false" />
+        <activity
             android:name=".SetCar"
             android:exported="false" />
         <activity
             android:name=".Menu_Cars"
-            android:exported="false" />
-        <activity
-            android:name=".Coche_5"
-            android:exported="false" />
-        <activity
-            android:name=".Coche_4"
-            android:exported="false" />
-        <activity
-            android:name=".Coche_3"
-            android:exported="false" />
-        <activity
-            android:name=".Coche_2"
-            android:exported="false" />
-        <activity
-            android:name=".Coche_1"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
